--- a/packages/my-app/package.json
+++ b/packages/my-app/package.json
@@ -11,8 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0"
+    "vite": "^3.0.9"
   },
   "dependencies": {
     "solid-js": "^1.5.1"
