--- a/packages/solid-ring-ui/package.json
+++ b/packages/solid-ring-ui/package.json
@@ -10,14 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/preset-typescript": "^7.18.6",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@types/babel__core": "^7.1.20",
-    "babel-preset-solid": "^1.6.2",
-    "rollup": "^3.6.0",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "vite": "^3.0.9",
+    "vite-plugin-solid": "^2.4.0"
   },
   "dependencies": {
     "solid-js": "^1.5.1"
